Remove data grid view background from themes
https://online.sbis.ru/opendoc.html?guid=11d6b859-c528-44b1-8daa-46d966ad5a71&des=
Задача в разработку 04.07.2017 Внедрить компонент Master-Detail в раздел Бизнес-Маркет-поставщики…

--- a/themes/genie/variables.less
+++ b/themes/genie/variables.less
@@ -1621,7 +1621,7 @@
 // Data grid //
 // --------- //
 
-@data-grid-bg:                                  @white-color;
+@data-grid-bg:                                  transparent;
 @data-grid-border-spacing:                      0;
 @data-grid-border-collapse:                     separate;
 @data-grid-border-width:                        0;
