https://online.sbis.ru/opendoc.html?guid=cbe9c15b-a083-46a5-a34e-d6e526e1dd04&des= Ошибка в разработку 28.07.2017 В поле связи при открытии полного списка значений в поле отсутсвует отступ между двумя колонками спи…

--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -4,9 +4,6 @@
    border: @controls-FieldLink-border @gray-ccc-color;
    margin-top: 0;
    overflow: auto;
-}
-
-.controls-FieldLink__picker:not(.controls-Suggest__picker) {
    padding: @controls-FieldLink-linkContainer-padding;
    border-top: none;
    .flexbox();
@@ -33,6 +30,10 @@
          .text-overflow();
          height: @controls-FieldLink-linkItem-line-height;
       }
+   }
+   
+   &.ws-disabled .controls-FieldLink__item-caption {
+      margin-right: @controls-FieldLink-disabled-item-picker-margin;
    }
 
    &.controls-popup-revert-vertical {
