--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -627,13 +627,10 @@ body {
 }
 
 .controls-IconButton.controls-TreeView__editArrow-container {
-  @offset: round((1.785 - 1.32) / 2rem, 4);
+  @offset: .2695rem;
   margin-top: calc(~"@{default-border-width} - @{offset}");
   .icon-16 {
-    font-size: 1.785rem !important;
-    line-height: 1.785rem !important;
-    width: 1.785rem;
-    height: 1.785rem;
+    .icon-size(@icon-medium-size, @icon-font);
   }
 }
 
