--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -718,3 +718,7 @@
 @long-operations-reg-filter-height: 46px;
 @long-operations-reg-filter-title-height: 40px;
 
+
+@money-decorator-fraction-font-size:                16px;
+
+
