при редактирование по месту по стандарту не может быть кнопки меню https://online.sbis.ru/opendoc.html?guid=3b83bd73-e63c-4af8-94e9-bbf0007c8247&des= Ошибка в разработку 14.07.2017 Этапы. Если открыть этап-узел на редактирование, и не уводить курсор, то опции строки остаются на об…

--- a/components/ListView/resources/ItemsToolbar/ItemsToolbar.less
+++ b/components/ListView/resources/ItemsToolbar/ItemsToolbar.less
@@ -38,6 +38,9 @@
          line-height: @list-view-items-toolbar-vertical-line-height !important;
       }
    }
+   .controls-ItemActions__menu-button {
+      display: none;
+   }
 }
 
 .controls-CompositeView {
