--- a/components/ButtonGroupBase/resources/ItemTemplate.tmpl
+++ b/components/ButtonGroupBase/resources/ItemTemplate.tmpl
@@ -1,6 +1,6 @@
 <ws:partial
    template="{{'js!' + item.get('componentType')}}"
    attributes="{{ {'data-hash': projItem.getHash(), 'data-id': item.getId()} }}"
-   className="controls-ListView__item"
+   class="controls-ListView__item"
    scope="{{item.getRawData()}}"
 />
