Поправил цвет текста. https://online.sbis.ru/opendoc.html?guid=bfb7dc64-1464-41a5-93d4-73e0bd280e09&des= Ошибка в разработку 01.08.2017 Platforma_3.17.20_regression_test_presto_CONTROLS - Поехала верстка в presto и carry При ховере прыг…

--- a/components/SwitcherDouble/SwitcherDouble.less
+++ b/components/SwitcherDouble/SwitcherDouble.less
@@ -148,7 +148,7 @@ body:not(.ws-is-mobile-platform) .ws-enabled.controls-SwitcherDouble .controls-S
    margin-right: @switcher-do-text-margin;
 }
 .ws-enabled.controls-SwitcherDouble .controls-SwitcherDouble__unselected {
-   color: @innacent-color2;
+   color: @switcher-do-unselected-text-color;
    &:hover {
       text-decoration: @switcher-do-text-unselected-decoration;
    }
