--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -1053,8 +1053,8 @@
 @controls-NotificationPopup-border-top:   @controls-NotificationPopup-border;
 @controls-NotificationPopup-border-right: @controls-NotificationPopup-border;
 @controls-NotificationPopup-border-left:  @controls-NotificationPopup-border;
-@controls-NotificationPopup-header-padding:                   6px;
-@controls-NotificationPopup-header-padding-with-close-button: 6px calc(6px + 1.7857rem) 6px 8px;
+@controls-NotificationPopup-header-padding:                   0.2857rem;
+@controls-NotificationPopup-header-padding-with-close-button: @controls-NotificationPopup-header-padding 2.0714rem @controls-NotificationPopup-header-padding 8px;
 @back-button-text-color:                  #FFCC99;
 @controls-FieldLink-link-color-hover:     @default-hover-color;
 
