https://online.sbis.ru/opendoc.html?guid=55c245ee-430b-4577-9a53-ebf39c070870&des= Ошибка в разработку 02.08.2017 Не локализован текст "Еще" в Docview.List…

--- a/components/ListView/resources/ItemActionsGroup/ItemActionsGroup.xhtml
+++ b/components/ListView/resources/ItemActionsGroup/ItemActionsGroup.xhtml
@@ -5,7 +5,7 @@
          <opt name="allowChangeEnable" type="boolean" value="false"/>
          <opt name="visible" type="boolean" value="false"/>
          <opt name="command" value="showMenu"/>
-         <opt name="caption" value="Ещё..."/>
+         <opt name="caption" value="{[Ещё...]}"/>
          <opt name="icon" value="icon-size icon-ExpandDown icon-primary action-hover"/>
       </component>
       <div class="controls-ItemActions__menu-container" style="display:none;"></div>
