https://online.sbis.ru/opendoc.html?guid=15ffad55-162f-49df-bc10-44784e04ca49&des= Задача в разработку 04.07.2017 Написать юнит-тесты для системы фокусов по заданным кейсам…

--- a/tests/WSTest/Focus/Case28.tmpl
+++ b/tests/WSTest/Focus/Case28.tmpl
@@ -2,7 +2,7 @@
    Scenario28
    <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0" activableByClick="{{ false }}">
       <ws:content>
-         <ws:SBIS.CONTROLS.TextBox name="TextBox0"/>
+         <ws:SBIS3.CONTROLS.TextBox name="TextBox0"/>
       </ws:content>
    </ws:SBIS3.CONTROLS.Panel>
 </div>
