--- a/tests/WSTest/Focus/Case30.tmpl
+++ b/tests/WSTest/Focus/Case30.tmpl
@@ -1,11 +1,3 @@
-<div>
-   Scenario30
-   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
-      <ws:coontent>
-         <ws:SBIS3.CONTROLS.TextBox name="TextBox0"/>
-         <ws:SBIS3.CORE.Button tabindex="0"/>
-      </ws:coontent>
-   </ws:SBIS3.CONTROLS.Panel>
-   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract1">
-   </ws:SBIS3.CONTROLS.Panel>
+<div class="Case30Control">
+   <ws:SBIS3.CONTROLS.TextBox name="TextBox0"/>
 </div>
