--- a/tests/WSTest/Focus/Case24.tmpl
+++ b/tests/WSTest/Focus/Case24.tmpl
@@ -1,6 +1,7 @@
 <div>
    Scenario24
-   <input type="text" class="input1">
+   <!--<input type="text" class="input1">-->
+   <ws:SBIS3.CORE.Button name="Button0"></ws:SBIS3.CORE.Button>
    <ws:SBIS3.CONTROLS.Panel name="AreaAbstract1">
       <ws:content>
          <input class="input2" type="text">
