https://online.sbis.ru/opendoc.html?guid=675ab4d9-3672-4768-97e9-92a812fedf21&des= Ошибка в разработку 26.07.2017 Редизайн. Розница Онлайн. Неверный цвет бутерброда выбора единицы измерения в карточке товара online…

--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -123,6 +123,7 @@
 @controls-FieldLink-FilterButton-color-hover:#313E78;
 @controls-FieldLink-border-color-focus-hover:@gray-ccc-color;
 @controls-FieldLink-border-color-picker-show:#0055BB;
+@controls-FieldLink-showSelector-color:   #2D68B5;
 // MonthView //
 @month-view-bg:                           @white-color;
 @month-view-day-cell-text-color:          inherit;
