https://online.sbis.ru/opendoc.html?guid=7d5afb9d-badf-4d97-9e51-74937985b137&des= Ошибка в разработку 05.07.2017 Стрелки поворачивают вниз у названия блока, как будто они развернут, а он свернут кабинет123/кабинет…

--- a/components/DataGridView/resources/GroupTemplate.tmpl
+++ b/components/DataGridView/resources/GroupTemplate.tmpl
@@ -1,4 +1,4 @@
-<tr class="controls-GroupBy{{(stickyHeader) ? ' ws-sticky-header__table-sticky-row' : ''}}" data-group="{{groupId}}">
+<tr class="controls-GroupBy{{(stickyHeader) ? ' ws-sticky-header__table-sticky-row' : ''}}{{groupCollapsing[groupId] ? ' controls-GroupBy__collapsed' : ''}}" data-group="{{groupId}}">
     <td colspan="{{colspan}}">
         <ws:partial template="{{groupContentTemplate}}" scope="{{...}}" />
     </td>
