--- a/components/ListView/resources/GroupTemplate.tmpl
+++ b/components/ListView/resources/GroupTemplate.tmpl
@@ -1,3 +1,3 @@
-<div class="controls-GroupBy" data-group="{{groupId}}">
+<div class="controls-GroupBy{{groupCollapsing[groupId] ? ' controls-GroupBy__collapsed' : ''}}" data-group="{{groupId}}">
     <ws:partial template="{{ groupContentTemplate }}" scope="{{...}}"></ws:partial>
 </div>
