https://online.sbis.ru/opendoc.html?guid=fdfa5772-d46f-49da-8b7a-a3d0cd941bf1&des= Ошибка в разработку 31.07.2017 Android 5.1 (планшет), Chrome. Уехало вниз название периода в блоках раздела "Розница/ККТ" (см. скри…

--- a/components/BackButton/BackButton.less
+++ b/components/BackButton/BackButton.less
@@ -95,7 +95,7 @@
       }
    }
 
-   body:not(.ws-is-mobile-ios) &.controls-BackButton__alignment {
+   body:not(.ws-is-mobile-platform) &.controls-BackButton__alignment {
       vertical-align: top;
    }
 
