--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -6,7 +6,7 @@
 @default-icon-size-medium:                                                                                              24px;
 @default-icon-size-large:                                                                                               32px;
 @default-line-height:                                                                                                   18px;
-@default-base-line-height:                                                                                              22px;
+@default-base-line-height:                                                                                              22px;//@default-height - 2 * @default-border-width
 @default-input-padding:                                                                                                 4px;
 //textbox
 @text-box-height:                                                                                                       @default-height;
