DatePicker: Названия месяцев не были переведены
https://online.sbis.ru/opendoc.html?guid=12179aaf-4ab9-4651-b45f-532487cfae5e&des=
Ошибка в разработку 02.08.2017 Не локализованы месяцы в контроле выбора даты DatePicker…

--- a/components/DateRangeBigChoose/DateRangeBigChoose.xhtml
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.xhtml
@@ -141,7 +141,7 @@
 
    <div class="controls-DateRangeBigChoose__dates ws-hidden">
       <div class="controls-DateRangeBigChoose__dates-months">
-         {{~['Январь', 'Февраль', 'Март', 'Апрель', 'Май', 'Июнь', 'Июль', 'Август', 'Сентябрь', 'Октябрь', 'Ноябрь', 'Декабрь'] :monthCaption:monthIndex}}
+         {{~ it._monthsNames :monthCaption:monthIndex}}
          <component data-component="SBIS3.CONTROLS.Button" name="MonthRangeBtn{{=monthIndex}}" data-selected-range-id="{{=monthIndex}}" class="controls-DateRangeBigChoose__dates-month-btn controls-RangeSelectable__item">
             <option name="caption">{{=monthCaption}}</option>
             <option name="activableByClick" type="boolean">false</option>
