https://online.sbis.ru/opendoc.html?guid=5ac2cb23-5c19-4fb4-b9c2-0235733bee8f&des= Ошибка в разработку 03.08.2017 Редизайн. Розница 3.17.20-369. Кривое окно настройки продажи алкоголя магазин/Тест123 настройки / …

--- a/components/SwitcherDouble/SwitcherDouble.tmpl
+++ b/components/SwitcherDouble/SwitcherDouble.tmpl
@@ -13,13 +13,13 @@
    <ws:if data="{{disposition === 'vertical'}}">
       <ws:partial template="toggle" scope="{{...}}"/>
       <span class="controls-SwitcherDouble__textBlock">
-         <span class="js-controls-SwitcherDouble__textOn controls-SwitcherDouble__text controls-SwitcherDouble__textOn{{checked ? '' : ' controls-SwitcherDouble__unselected'}}">{{stateOn}}</span>
-         <span class="js-controls-SwitcherDouble__textOff controls-SwitcherDouble__text controls-SwitcherDouble__textOff{{checked ? ' controls-SwitcherDouble__unselected' : ''}}">{{stateOff}}</span>
+         <span class="js-controls-SwitcherDouble__textOn controls-SwitcherDouble__text controls-SwitcherDouble__textOn{{checked ? '' : ' controls-SwitcherDouble__unselected'}}">{{stateOn|sanitize}}</span>
+         <span class="js-controls-SwitcherDouble__textOff controls-SwitcherDouble__text controls-SwitcherDouble__textOff{{checked ? ' controls-SwitcherDouble__unselected' : ''}}">{{stateOff|sanitize}}</span>
       </span>
    </ws:if>
    <ws:else>
-      <span class="js-controls-SwitcherDouble__textOff controls-SwitcherDouble__text controls-SwitcherDouble__textOff{{checked ? ' controls-SwitcherDouble__unselected' : ''}}">{{stateOff}}</span>
+      <span class="js-controls-SwitcherDouble__textOff controls-SwitcherDouble__text controls-SwitcherDouble__textOff{{checked ? ' controls-SwitcherDouble__unselected' : ''}}">{{stateOff|sanitize}}</span>
       <ws:partial template="toggle" scope="{{...}}"/>
-      <span class="js-controls-SwitcherDouble__textOn controls-SwitcherDouble__text controls-SwitcherDouble__textOn{{checked ? '' : ' controls-SwitcherDouble__unselected'}}">{{stateOn}}</span>
+      <span class="js-controls-SwitcherDouble__textOn controls-SwitcherDouble__text controls-SwitcherDouble__textOn{{checked ? '' : ' controls-SwitcherDouble__unselected'}}">{{stateOn|sanitize}}</span>
    </ws:else>
 </span>
