https://online.sbis.ru/opendoc.html?guid=331894d0-c06e-4ba8-af6e-d9cbf82a87e0&des= Задача в разработку 10.07.2017 Прошу принять в работу изменения в теме оформления "Панель действий и множественный выбор" Что изме…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -665,8 +665,10 @@
 @controls-OperationsPanel-bg:             #F0F5FB;
 @controls-OperationsPanel-actions-margin: 0 .14rem;
 @controls-OperationsPanel-actions-align:  baseline;
-//Пока нет стандарта, выписана подзадача https://online.sbis.ru/opendoc.html?guid=773fe3ec-edf2-434b-ab51-7fdafff585c5&des=
-@controls-OperationsPanel-separator-width:0;
+@controls-OperationsPanel-separator-width:  2px;
+@controls-OperationsPanel-separator-height: 1.9285rem;
+@controls-OperationsPanel-separator-line-height: 2.5rem;
+@controls-OperationsPanel-separator-bg:   #38546C;
 //OperationsPanelButton
 @controls-OperationsPanelButton-width:    0.86rem;
 @controls-OperationsPanelButton-vert-height:3.57rem;
