--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -174,6 +174,7 @@
 @data-grid-results-color:                 #313E78;
 // OperationsPanel
 @controls-OperationsPanel-bg:                       #354B62;
+@controls-OperationsPanel-separator-bg:             #CCC;
 // OperationsPanelButton
 @controls-OperationsPanelButton-color:    #FFFFFF;
 // DropdownList
