LongOperations: Изменены стили

--- a/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
+++ b/components/LongOperations/LongOperationsPopup/LongOperationsPopup.less
@@ -14,14 +14,19 @@
 //@long-operations-popup-collapsed-header-caption-f-size: //@long-operations-popup-header-caption-f-size;
 //@long-operations-popup-collapsed-header-caption-line-height: //@long-operations-popup-header-caption-line-height;
 //@long-operations-popup-collapsed-header-caption-color: //@long-operations-popup-header-caption-color;
-//@long-operations-popup-header-stop-but-f-size: inherit;
-//@long-operations-popup-header-stop-but-color: #999999;
+//@long-operations-popup-header-result-max-width: 150px;
+//@long-operations-popup-header-result-min-width: 48px;
+//@long-operations-popup-header-suspended-f-size: inherit;
+//@long-operations-popup-header-suspended-color: #999999;
+//@long-operations-popup-list-time-f-size: 12px;
+//@long-operations-popup-list-border-bot: 1px solid #F5F5F5;
+//@long-operations-popup-reg-but-ctr-height: 24px;
+//@long-operations-popup-reg-but-line-height: 12px;
 //@long-operations-popup-foot-height: 32px;
 //@long-operations-popup-foot-bg: #F3F3F3;
 //@long-operations-popup-foot-f-size: 12px;
 //@long-operations-popup-foot-color: #999999;
-//@long-operations-popup-reg-but-ctr-height: 24px;
-//@long-operations-popup-reg-but-line-height: 12px;
+//@long-operations-popup-foot-accent-color: #333333;
 
 
 
@@ -91,9 +96,9 @@
 .controls-LongOperationsPopup__header_stoppedOperationsButton {
     margin-left: 16px;
     cursor: pointer;
-    font-size: @long-operations-popup-header-stop-but-f-size;
+    font-size: @long-operations-popup-header-suspended-f-size;
     white-space: nowrap;
-    color: @long-operations-popup-header-stop-but-color;
+    color: @long-operations-popup-header-suspended-color;
 }
 
 .controls-LongOperationsPopup__header_stoppedOperationsButton:hover {
@@ -131,8 +136,8 @@
 }
 
 .controls-LongOperationsPopup__header_downloadButton {
-    max-width: 150px;
-    min-width: 48px;
+    max-width: @long-operations-popup-header-result-max-width;
+    min-width: @long-operations-popup-header-result-min-width;
     margin-left: 8px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -179,7 +184,7 @@
 .controls-LongOperationsPopup__content .controls-LongOperationsList .controls-LongOperationsList__executeTimeContainer.controls-DataGridView__td,
 .controls-LongOperationsPopup__content .controls-LongOperationsList .controls-DataGridView__tr.controls-ListView__hoveredItem .controls-LongOperationsList__executeTimeContainer.controls-DataGridView__td {
     color: #CCC;
-    font-size: 12px;
+    font-size: @long-operations-popup-list-time-f-size;
 }
 
 .controls-LongOperationsPopup__content .controls-LongOperationsList .controls-DataGridView__firstContentCell {
@@ -203,7 +208,7 @@
 
 .controls-LongOperationsPopup__content_list {
     /*###width: calc(@long-operations-popup-exp-width - 1px);*/
-    border-bottom: 1px solid #F5F5F5;
+    border-bottom: @long-operations-popup-list-border-bot;
 }
 
 .controls-LongOperationsPopup__content_list .controls-LongOperationsList__nameColumn {
@@ -231,12 +236,16 @@
     text-align: center;
 }
 
-.controls-LongOperationsPopup__footer_execTasks,
 .controls-LongOperationsPopup__footer_executeTime,
-.controls-LongOperationsPopup__footer_progress,
-.controls-LongOperationsPopup__footer_notification {
+.controls-LongOperationsPopup__footer_execTasks,
+.controls-LongOperationsPopup__footer_notification,
+.controls-LongOperationsPopup__footer_progress {
     font-size: @long-operations-popup-foot-f-size;
     color: @long-operations-popup-foot-color;
+}
+
+.controls-LongOperationsPopup__footer_progress {
+    color: @long-operations-popup-foot-accent-color;
 }
 
 .controls-LongOperationsPopup__footer_progress {
