--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -278,14 +278,19 @@
 @long-operations-popup-header-caption-color: #313E78;
 @long-operations-popup-collapsed-header-caption-f-size: 24px;
 @long-operations-popup-collapsed-header-caption-color: @long-operations-popup-header-caption-color;
-@long-operations-popup-header-stop-but-f-size: 24px;
-@long-operations-popup-header-stop-but-color: #a8acc3;
+@long-operations-popup-header-result-max-width: 210px;
+@long-operations-popup-header-result-min-width: 64px;
+@long-operations-popup-header-suspended-f-size: 24px;
+@long-operations-popup-header-suspended-color: #a8acc3;
+@long-operations-popup-list-time-f-size: 21px;
+@long-operations-popup-list-border-bot: 0px none;
+@long-operations-popup-reg-but-ctr-height: 50px;
+@long-operations-popup-reg-but-line-height: 50px;
 @long-operations-popup-foot-height: 50px;
 @long-operations-popup-foot-bg: #293543;
 @long-operations-popup-foot-f-size: 16px;
 @long-operations-popup-foot-color: #ffffff;
-@long-operations-popup-reg-but-ctr-height: 50px;
-@long-operations-popup-reg-but-line-height: 50px;
+@long-operations-popup-foot-accent-color: #ffffff;
 @long-operations-reg-filter-width: 220px;
 @long-operations-reg-filter-height: 46px;
 @long-operations-reg-filter-title-height: 40px;
