--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -707,10 +707,12 @@
 @long-operations-popup-header-caption-color: #313E78;
 @long-operations-popup-collapsed-header-caption-f-size: 24px;
 @long-operations-popup-collapsed-header-caption-color: #000000;
-@long-operations-popup-foot-height: 50px;
-@long-operations-popup-foot-f-size: 16px;
+@long-operations-popup-list-time-f-size: 21px;
+@long-operations-popup-list-border-bot: 0px none;
 @long-operations-popup-reg-but-ctr-height: 50px;
 @long-operations-popup-reg-but-line-height: 50px;
+@long-operations-popup-foot-height: 50px;
+@long-operations-popup-foot-f-size: 16px;
 @long-operations-reg-filter-width: 220px;
 @long-operations-reg-filter-height: 46px;
 @long-operations-reg-filter-title-height: 40px;
