--- a/components/ProgressBar/ProgressBar.tmpl
+++ b/components/ProgressBar/ProgressBar.tmpl
@@ -1,6 +1,6 @@
-<div class="controls-ProgressBar controls-ProgressBar_align-{{progressPosition}}">
+<div class="controls-ProgressBar controls-ProgressBar_align-{{_options.progressPosition}}">
    <div
       class="controls-ProgressBar__progress controls-ProgressBar__progress_size controls-ProgressBar__progress_color controls-ProgressBar__progress_colorValue"
-      style="background-size: {{progressPercent}}% 100%;"
-   >{{progressPercent}}%</div>
+      style="background-size: {{_progressPercent}} 100%;"
+   >{{_progressPercent}}</div>
 </div>
