--- a/components/StylesPanelNew/StylesPanelNew.xhtml
+++ b/components/StylesPanelNew/StylesPanelNew.xhtml
@@ -1,7 +1,7 @@
 <div class="controls-StylesPanel controls-StylesPanelNew {{?it.paletteRenderStyle}}controls-StylesPanel__colorPalette{{?}} controls-FloatArea">
     {{?!it.paletteRenderStyle}}
     <div  class="controls-StylesPanel__header">
-        <div class="controls-StylesPanel__title" title="Стиль и цвет">Стиль и цвет</div>
+        <div class="controls-StylesPanel__title" title="Стиль и цвет">{[Стиль и цвет]}</div>
         <component data-component="SBIS3.CONTROLS.IconButton" class="controls-StylesPanel__applyButton controls-IconButton__round-border controls-IconButton__round icon-size" name="Apply">
             <option name="icon">sprite:icon-16 icon-Yes icon-done</option>
             <option name="command">saveStylesPanel</option>
