--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -825,7 +825,7 @@
 @long-operations-popup-exp-width: 600px;
 @long-operations-popup-exp-max-width: 600px;
 @long-operations-popup-header-height: 60px;
-@long-operations-popup-header-pad-rt: 96px;
+@long-operations-popup-header-pad-rt: 54px;
 @long-operations-popup-header-icon-size: 32px;
 @long-operations-popup-header-caption-f-size: 32px;
 @long-operations-popup-header-caption-line-height: 52px;
@@ -834,17 +834,21 @@
 @long-operations-popup-collapsed-header-caption-color: @long-operations-popup-header-caption-color;
 @long-operations-popup-header-result-max-width: 210px;
 @long-operations-popup-header-result-min-width: 64px;
-@long-operations-popup-header-suspended-f-size: 24px;
+@long-operations-popup-header-but-f-size: 24px;
+@long-operations-popup-header-but-gap-top: 7px;
+@long-operations-popup-collapsed-header-but-gap-top: 0px;
 @long-operations-popup-header-suspended-color: @disabled-color;
 @long-operations-popup-list-time-f-size: 21px;
 @long-operations-popup-list-border-bot: 0px none;
 @long-operations-popup-reg-but-ctr-height: 50px;
 @long-operations-popup-reg-but-line-height: 50px;
 @long-operations-popup-foot-height: 50px;
-@long-operations-popup-foot-bg: #293543;
+@long-operations-popup-foot-bg: #354b62;
 @long-operations-popup-foot-f-size: 16px;
+@long-operations-popup-foot-but-gap-top: 12px;
 @long-operations-popup-foot-color: @disabled-color;
 @long-operations-popup-foot-accent-color: @default-text-color;
+@long-operations-popup-foot-but-hover-color: #b9e9ff !important;
 @long-operations-reg-filter-width: 220px;
 @long-operations-reg-filter-height: 46px;
 @long-operations-reg-filter-title-height: 40px;
