--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -700,7 +700,7 @@
 @long-operations-popup-exp-max-width: 600px;
 @long-operations-popup-header-height: 60px;
 @long-operations-popup-header-line-height: 60px;
-@long-operations-popup-header-pad-rt: 72px;
+@long-operations-popup-header-pad-rt: 54px;
 @long-operations-popup-header-icon-size: 32px;
 @long-operations-popup-header-caption-f-size: 32px;
 @long-operations-popup-header-caption-line-height: 52px;
@@ -713,6 +713,8 @@
 @long-operations-popup-reg-but-line-height: 50px;
 @long-operations-popup-foot-height: 50px;
 @long-operations-popup-foot-f-size: 16px;
+@long-operations-popup-foot-but-gap-top: 12px;
+@long-operations-popup-foot-but-hover-color: #b9e9ff !important;
 @long-operations-reg-filter-width: 220px;
 @long-operations-reg-filter-height: 46px;
 @long-operations-reg-filter-title-height: 40px;
