--- a/components/WSControls/Lists/resources/ItemTemplate.tmpl
+++ b/components/WSControls/Lists/resources/ItemTemplate.tmpl
@@ -1,4 +1,4 @@
-<div class="controls-ListView__item js-controls-ListView__item {{ itemData.selected ? 'controls-ListView__item__selected' }} {{itemData.hovered ? 'controls-ListView__item__hovered' }} {{ multiSelected ? 'controls-ListView__item__multiSelected' }} {{ className }} "
+<div class="controls-ListView__item js-controls-ListView__item {{ _isItemSelected(projItem) ? 'controls-ListView__item__selected' }} {{itemData.hovered ? 'controls-ListView__item__hovered' }} {{ multiSelected ? 'controls-ListView__item__multiSelected' }} {{ className }} "
      data-hash="{{ projItem.getHash() }}"
      event:onclick="_onItemClick(projItem)"
      event:onmousemove="_mouseMove(index)">
