https://online.sbis.ru/opendoc.html?guid=dcbe580a-f621-465c-80bb-1ce243b207e7&des= Ошибка в разработку 05.07.2017 Описать контрол с серверной версткой и опцией _template чтобы проверить, что НЕ контролы не пытаются…

--- a/tests/WSTest/TestSubControls/TestSubControlChild.tmpl
+++ b/tests/WSTest/TestSubControls/TestSubControlChild.tmpl
@@ -1,6 +1,6 @@
 <div>
    childControl
    <ws:if data="{{_options.content}}">
-      <ws:partial template="{{_options.content}}"></ws:partial>
+      <ws:partial template="{{_options.content}}" _template="myOption"></ws:partial>
    </ws:if>
 </div>
