Revert "https://online.sbis.ru/opendoc.html?guid=2fd84d0d-9ffd-45fd-9781-af5cb32237c6&des="
This reverts commit f6dc8c4b181b097e84399e82e179b5ae60fdaaa8.

--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -55,6 +55,10 @@
          }
       }
    }
+   
+   &.ws-hidden + .controls__filterButton-button {
+      margin-left: 8px;
+   }
 }
 .controls__filterButton__filterLine-items, .controls__filterButton__filterLine-text {
    .text-overflow();
