--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2238,7 +2238,7 @@
 @controls-filterButton-line-height:               @link-line-height;
 @controls-filterButton-apply-margin-right:        0;
 
-@controls-filterButton-filterLine-margin:         8px 0 8px 0;
+@controls-filterButton-filterLine-margin:         8px 8px 8px 0;
 
 //FilterButtonHistory
 @controls-filterButton-history-wrapper-padding:   6px;
