https://online.sbis.ru/opendoc.html?guid=7f329d26-9bf1-472b-87a3-8e496c36ebee&des= Ошибка в разработку 04.08.2017 Android 5.1 (планшет), Chrome. Бизнес / Работы Обрезано название фильтра по периоду (см. скрин). Ш…

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2238,6 +2238,7 @@
 @controls-filterButton-line-height:               @link-line-height;
 @controls-filterButton-apply-margin-right:        0;
 
+@controls-filterButton-margin-value:              8px;
 @controls-filterButton-filterLine-margin:         8px 8px 8px 0;
 
 //FilterButtonHistory
