--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -57,7 +57,7 @@
    }
    
    &.ws-hidden + .controls__filterButton-button {
-      margin-left: 8px;
+      margin-left: @controls-filterButton-margin-value;
    }
 }
 .controls__filterButton__filterLine-items, .controls__filterButton__filterLine-text {
