https://online.sbis.ru/opendoc.html?guid=7f329d26-9bf1-472b-87a3-8e496c36ebee&des= Ошибка в разработку 04.08.2017 Android 5.1 (планшет), Chrome. Бизнес / Работы Обрезано название фильтра по периоду (см. скрин). Ш…

--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -27,7 +27,7 @@
 }
 
 .controls__filterButton__filterLine {
-   max-width: calc(~"100% - "@controls-filterButton-button-width~" - 8px");
+   max-width: calc(~"100% - @{controls-filterButton-button-width} - @{controls-filterButton-margin-value}");
    height: @controls-filterButton-button-height;
    margin: @controls-filterButton-filterLine-margin;
    cursor: pointer;
