https://online.sbis.ru/opendoc.html?guid=1e039840-ef06-462f-a3b5-0a1c24048f97&des= Merge request 01.08.2017 Регламент: Задача в разработку. Автор: Болдырев А.Н.Описание: Компонент Image. Прошу предоставить ме…

--- a/components/RichEditor/RichEditorComponents/RichEditorToolbarBase/RichEditorToolbarBase.less
+++ b/components/RichEditor/RichEditorComponents/RichEditorToolbarBase/RichEditorToolbarBase.less
@@ -35,7 +35,7 @@
    }
 }
 
-.ws-is-windows-8, .ws-is-windows-10, .ws-is-firefox {
+.ws-is-windows-8, .ws-is-firefox {
    .controls-RichEditorToolbar__smilesPicker {
       width: 200px;
       font-family: 'TensorFont', sans-serif;
