--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -27,7 +27,7 @@
 }
 
 .controls__filterButton__filterLine {
-   max-width: calc(~"100% - @{controls-filterButton-button-width} - @{controls-filterButton-margin-value}");
+   max-width: calc(~"100% - @{controls-filterButton-button-width} - @{controls-filterButton-margin-value} * 2");
    height: @controls-filterButton-button-height;
    margin: @controls-filterButton-filterLine-margin;
    cursor: pointer;
