не учитывались заданные размеры контейнера т.к. span по умолчанию строчный элемент https://online.sbis.ru/opendoc.html?guid=3e33e3cf-05e2-43b0-bf15-57088352ec2b&des= Ошибка в разработку 07.08.2017 IE11: проехала верстка в меню маркированного списка заметки (см.скрин1) Шаги: - IE11 - Меню пользова…

--- a/components/MenuItem/MenuItem.less
+++ b/components/MenuItem/MenuItem.less
@@ -83,24 +83,11 @@
          background: @menu-item-hover-bg;
       }
    }
-   // т.к. IE8 не поддерживает :not, то делаю для него отдельный фикс подсветки по ховеру,
-   // усилил селектор задизейбленного состояния т.к. иначе ховер его перебьет
-   &.ws-is-ie8 {
-      .controls-MenuItem{
-         &:hover {
-            color: @menu-item-hover-text-color;
-            background: @menu-item-hover-bg;
-         }
-         &.ws-disabled {
-            color: @menu-item-disabled-text-color;
-            background: transparent;
-            cursor: default;
-
-            .controls-MenuItem__icon {
-               color: @menu-item-disabled-text-color !important;
-            }
-         }
-
+}
+.ws-is-ie {
+   .controls-MenuItem {
+      .controls-MenuItem__content {
+         display: block;
       }
    }
 }
