https://online.sbis.ru/opendoc.html?guid=eaf7c3e3-f1e6-40f5-84ac-0c6661fedd54&des=

--- a/themes/fonts/carrypresto-icons.less
+++ b/themes/fonts/carrypresto-icons.less
@@ -4,6 +4,7 @@
    src:  url('carrypresto/carrypresto-icons.eot?mjswbb');
    src:  url('carrypresto/carrypresto-icons.eot?mjswbb#iefix') format('embedded-opentype'),
    url('carrypresto/carrypresto-icons.ttf?mjswbb') format('truetype'),
+   url('carrypresto/carrypresto-icons.woff2?mjswbb') format('woff2'),
    url('carrypresto/carrypresto-icons.woff?mjswbb') format('woff'),
    url('carrypresto/carrypresto-icons.svg?mjswbb#carrypresto-icons') format('svg');
    font-weight: normal;
