--- a/themes/fonts/tensorFont.less
+++ b/themes/fonts/tensorFont.less
@@ -2,6 +2,7 @@
    font-family: 'TensorFont';
    src: url('TensorFont/TensorFont.eot');
    src: url('TensorFont/TensorFont.eot?#iefix') format('embedded-opentype'),
+   url('TensorFont/TensorFont.woff2') format('woff2'),
    url('TensorFont/TensorFont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
@@ -11,6 +12,7 @@
    font-family: 'TensorFont';
    src: url('TensorFontBold/TensorFontBold.eot');
    src: url('TensorFontBold/TensorFontBold.eot?#iefix') format('embedded-opentype'),
+   url('TensorFontBold/TensorFontBold.woff2') format('woff2'),
    url('TensorFontBold/TensorFontBold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
@@ -20,6 +22,7 @@
    font-family: 'TensorFont';
    src: url('TensorFontBoldItalic/TensorFontBoldItalic.eot');
    src: url('TensorFontBoldItalic/TensorFontBoldItalic.eot?#iefix') format('embedded-opentype'),
+   url('TensorFontBoldItalic/TensorFontBoldItalic.woff2') format('woff2'),
    url('TensorFontBoldItalic/TensorFontBoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
@@ -29,6 +32,7 @@
    font-family: 'TensorFont';
    src: url('TensorFontItalic/TensorFontItalic.eot');
    src: url('TensorFontItalic/TensorFontItalic.eot?#iefix') format('embedded-opentype'),
+   url('TensorFontBoldItalic/TensorFontBoldItalic.woff2') format('woff2'),
    url('TensorFontItalic/TensorFontItalic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
@@ -37,6 +41,7 @@
    font-family: 'EmojiFont';
    src: url('EmojiFont/TFEmojiFont.eot');
    src: url('EmojiFont/TFEmojiFont.eot?#iefix') format('embedded-opentype'),
+   url('EmojiFont/TFEmojiFont.woff2') format('woff2'),
    url('EmojiFont/TFEmojiFont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
@@ -45,6 +50,7 @@
    font-family: 'EmojiFont';
    src: url('EmojiFontBold/TFEmojiFontBold.eot');
    src: url('EmojiFontBold/TFEmojiFontBold.eot?#iefix') format('embedded-opentype'),
+   url('EmojiFontBold/TFEmojiFontBold.woff2') format('woff2'),
    url('EmojiFontBold/TFEmojiFontBold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
@@ -53,6 +59,7 @@
    font-family: 'EmojiFont';
    src: url('EmojiFontItalic/TFEmojiFontItalic.eot');
    src: url('EmojiFontItalic/TFEmojiFontItalic.eot?#iefix') format('embedded-opentype'),
+   url('EmojiFontItalic/TFEmojiFontItalic.woff2') format('woff2'),
    url('EmojiFontItalic/TFEmojiFontItalic.woff') format('woff');
    font-weight: normal;
    font-style: italic;
@@ -61,6 +68,7 @@
    font-family: 'EmojiFont';
    src: url('EmojiFontBoldItalic/TFEmojiFontBoldItalic.eot');
    src: url('EmojiFontBoldItalic/TFEmojiFontBoldItalic.eot?#iefix') format('embedded-opentype'),
+   url('EmojiFontBoldItalic/TFEmojiFontBoldItalic.woff2') format('woff2'),
    url('EmojiFontBoldItalic/TFEmojiFontBoldItalic.woff') format('woff');
    font-weight: bold;
    font-style: italic;
