https://online.sbis.ru/opendoc.html?guid=c6d518ab-1a3f-4e69-b343-118133cc0219&des= Ошибка в разработку 08.08.2017 Редизайн Розница/Presto. Темы carrynew и prestonew. Цвет для иконок предупреждения (.icon-attention)…

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -47,7 +47,7 @@
 @default-border-width:                    1px;
 @default-border-style:                    solid;
 
-@icon-color-attention:                    #FEC63F;
+@icon-color-attention:                    @warning-color;
 @icon-color-done:                         #72be44;
 @icon-color-error:                        @red-color;
 @icon-color-primary:                      @default-color;
