--- a/components/FieldLink/FieldLink.less
+++ b/components/FieldLink/FieldLink.less
@@ -245,7 +245,7 @@
       color: @controls-FieldLink-link-color;
       text-decoration: underline;
 
-      &:hover:not(.controls-Link__disabledHover) {
+      &:hover {
          color: @controls-FieldLink-link-color-hover;
       }
    }
@@ -254,7 +254,7 @@
          color: @controls-FieldLink-FilterButton-color;
          text-decoration: none;
 
-         &.ws-enabled:hover:not(.controls-Link__disabledHover) {
+         &.ws-enabled:hover {
             color: @controls-FieldLink-FilterButton-color-hover;
             text-decoration: underline;
          }
