https://online.sbis.ru/opendoc.html?guid=0cde90d2-93a0-4ef9-911b-8521404bad6a&des= Ошибка в разработку 08.08.2017 Platforma_3.17.100_unit_tests_controls - падают юнит-тесты controls Focus-tests.Case21 (from Mocha …

--- a/tests/WSTest/Focus/Case23.tmpl
+++ b/tests/WSTest/Focus/Case23.tmpl
@@ -1,13 +1,13 @@
 <div>
    Scenario23
-   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
+   <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0" class="Case23 ">
       <ws:content>
          <input class="input1">
          <div class="div1"></div>
          <div tabindex="1" class="div2"></div>
          <textarea class="textArea" id="someTA" cols="30" rows="10"></textarea>
          <ws:SBIS3.CONTROLS.TextBox name="TextBox0"/>
-         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract0">
+         <ws:SBIS3.CONTROLS.Panel name="AreaAbstract1">
             <ws:content>
                <ws:SBIS3.CONTROLS.TextBox name="TextBox1"/>
             </ws:content>
