https://online.sbis.ru/opendoc.html?guid=41956b94-2eac-466d-ae84-f4d7465a3d93&des= Задача в разработку 04.08.2017 Прошу принять в работу тему оформления "Блоки": …

--- a/themes/online/sizes.less
+++ b/themes/online/sizes.less
@@ -31,3 +31,5 @@
 @search-button-wrapper-padding:                                                                                         0 5px 0 0;
 @search-loop-size:                                                                                                      @default-icon-size;
 @search-form-icon-padding:                                                                                              0 2px;
+//area-blocks
+@spacing-between-blocks:                                                                                                6px;
