--- a/themes/carrynew/theme.less
+++ b/themes/carrynew/theme.less
@@ -40,6 +40,9 @@ body {
   .ws-window-titlebar {
     color: #313E78;
   }
+  .ws-window-title{
+     color: #313E78;
+  }
   .ws-info-box {
       background: @default-bg-color;
       .ws-infobox-triangle {
@@ -48,12 +51,6 @@ body {
   }
   .ws-infobox-triangle {
     background: @default-bg-color;
-  }
-  .ws-window-title {
-     font-size: 1.43rem;
-     height: 3.57rem;
-     max-height: 3.57rem;
-     line-height: 3.57rem;
   }
   .ws-float-area-title {
       font-size: 1.43rem!important;
