--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -120,7 +120,7 @@
 @controls-FieldLink-picker-show-field-color: @default-text-color;
 @controls-FieldLink-link-color:           #2D68B5;
 @controls-FieldLink-FilterButton-color:   #2D68B5;
-@controls-FieldLink-FilterButton-color-hover:#313E78;
+@controls-FieldLink-FilterButton-color-hover:#2D68B5;
 @controls-FieldLink-border-color-focus-hover:@gray-ccc-color;
 @controls-FieldLink-border-color-picker-show:#0055BB;
 @controls-FieldLink-showSelector-color:   #2D68B5;
