https://online.sbis.ru/opendoc.html?guid=6e3c0173-e20b-4c34-a198-54c0a55e8e04&des= Ошибка в разработку 08.08.2017 Зазор между параметром заданным через фильтр и быстрым фильтром по региона в компаниях 1. test-onl…

--- a/components/FilterButton/FilterButton.less
+++ b/components/FilterButton/FilterButton.less
@@ -24,6 +24,9 @@
       float: left;
       margin: @controls-filterButton-button-margin-right-align;
    }
+   .controls__filterButton__filterLine {
+      margin: @controls-filterButton-button-margin-right-align;
+   }
 }
 
 .controls__filterButton__filterLine {
