https://online.sbis.ru/opendoc.html?guid=5e925548-4b2c-49ef-9da1-dae7481fed9c&des= Ошибка в разработку 01.08.2017 Edge. Карточка подразделения. Обрезается низ у букв в названии Как повторить: Демо_тензор/Демо123 Со…

--- a/components/TabButton/TabButton.less
+++ b/components/TabButton/TabButton.less
@@ -432,5 +432,12 @@
          position: relative;
          top: -1px;
       }
+   
+      /* Баг edge, из-за border-box'a обрезаются хвосты букв.
+         В качестве решения ещё предлагается сделать overflow: auto,
+         но это тут не подходит, т.к. текст должен обрезаться */
+      .controls-EditAtPlace .controls-EditAtPlace__fieldWrapper {
+         box-sizing: content-box;
+      }
    }
 }
