https://online.sbis.ru/opendoc.html?guid=e0e7792d-b39b-44fa-8ad2-392307b78966&des= Ошибка в разработку 08.08.2017 розница 3.17.20-425. Редизайн. Строка с надписью (названием торговой точки) доходит до границы окна …

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -309,10 +309,10 @@
       font-size: @DropdownList-picker-menu-font-size;
       .controls-DropdownList__itemTextWrapper {
          max-width: 100%;
+         min-width: 0; //flex hack
          vertical-align: top;
          .controls-DropdownList__item-text {
-            overflow: hidden;
-            white-space: nowrap;
+            .text-overflow();
             color: @DropdownList-picker-menu-item-base-color;
          }
       }
